--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.0",
-        "yeah/yeah-devtools": "master-dev"
+        "yeah/yeah-devtools": "dev-master"
     },
     "autoload": {
         "psr-0": { "Yeah\\ORM\\": "src", "Yeah\\DBAL": "src", "Yeah\\DB": "src" }
