--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,10 @@
     "keywords": ["framework", "PHP", "yeah", "ORM", "DBAL"],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.3.0",
-        "palethorn/yeah-devtools": "dev-master"
+        "php": ">=5.3.0"
     },
     "autoload": {
-        "psr-0": { "Yeah\\ORM\\": "src", "Yeah\\DBAL": "src", "Yeah\\DB": "src" }
+        "psr-4": { "Yeah\\": "src/Yeah" },
+        "files": [ "src/stdlib.php" ]
     }
 }
